# rag_tutorial

./: .env  .gitignore  README.md  pyproject.toml
rag_tutorial/: rag_tutorial.ipynb
rag_tutorial/.ipynb_checkpoints/: rag_tutorial-checkpoint.ipynb
