[tool.poetry]
name = "rag-tutorial"
version = "0.1.0"
description = ""
authors = ["taejunsong <songtj10@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
langchain-core = "^0.3.41"
langgraph = ">0.2.27"
langchain = {extras = ["groq"], version = "^0.3.20"}
python-decouple = "^3.8"
langchain-text-splitters = "^0.3.6"
langchain-community = "^0.3.19"
langchain-ollama = "^0.2.3"
duckduckgo-search = "^2025.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
